[package]
name = "cert-x-gen"
version = "1.0.0"
edition = "2021"
authors = ["CERT-X-GEN Core Team"]
description = "Advanced Multi-Language Security Scanning Engine"
license = "Apache-2.0"
repository = "https://github.com/Bugb-Technologies/cert-x-gen"
keywords = ["security", "scanning", "vulnerability", "pentesting"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "cxg"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
tempfile = "3.8"

# CLI parsing
clap = { version = "4.4", features = ["derive", "env", "color"] }
clap_complete = "4.4"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
config = "0.13"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
color-eyre = "0.6"

# Networking
reqwest = { version = "0.11", default-features = false, features = ["json", "cookies", "gzip", "brotli", "stream", "rustls-tls"] }
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
trust-dns-resolver = "0.23"

# HTTP/2 and HTTP/3
h2 = "0.4"

# TLS
rustls = "0.22"
tokio-rustls = "0.25"

# Parsing
regex = "1.10"
nom = "7.1"
pest = "2.7"
pest_derive = "2.7"

# Templating
tera = "1.19"
handlebars = "5.1"

# Data structures
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
walkdir = "2.4"

# Template management
git2 = "0.18"

# UUID and time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Metrics
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Hashing
sha2 = "0.10"
blake3 = "1.5"
base64 = "0.21"

# URL parsing
url = "2.5"

# Hex encoding/decoding
hex = "0.4"

# Serialization formats
csv = "1.3"
quick-xml = "0.31"

# CLI utilities
colored = "2.1"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# System
sysinfo = "0.30"
num_cpus = "1.16"
dirs = "5.0"

# Rate limiting
governor = "0.6"

# Random number generation
fastrand = "2.0"

# IP and CIDR parsing
ipnetwork = "0.20"

# DNS
trust-dns-proto = "0.23"

# Process management
nix = "0.27"

# Plugin system (dynamic loading)
libloading = "0.8"

# WASM support for templates
wasmtime = { version = "16.0", optional = true }

[dev-dependencies]
mockito = "1.2"
proptest = "1.4"
criterion = "0.5"
tempfile = "3.8"
wiremock = "0.5"

[features]
default = ["wasm"]
wasm = ["wasmtime"]
full = ["wasm"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
